--- a/dotfiles/i3/config
+++ b/dotfiles/i3/config
@@ -29,6 +29,12 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
+# Make the currently focused window a scratchpad
+bindsym $mod+Shift+minus move scratchpad
+
+# Show the first scratchpad window
+bindsym $mod+minus scratchpad show
+
 # kill focused window
 bindsym $mod+Shift+q kill
 
